fix: fixed google sign in method, edited to a more complete profile page

--- a/web/index.html
+++ b/web/index.html
@@ -18,6 +18,9 @@
 
   <base href="$FLUTTER_BASE_HREF">
 
+  <!-- SUPPORTS WEB CLIENT GOOGLE LOGIN -->
+  <meta name="google-signin-client_id" content="YOUR_WEB_CLIENT_ID.apps.googleusercontent.com" />
+  
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
   <meta name="description" content="A new Flutter project.">
